@@ -20,6 +20,11 @@
       <arg choice="plain"
       rep="repeat"><option>!</option><replaceable>address-or-range</replaceable>[,<replaceable>address-or-range</replaceable>]</arg>
     </cmdsynopsis>
+
+    <cmdsynopsis>
+      <arg choice="plain"
+      rep="repeat"><option>!</option><replaceable>zone-name</replaceable>[,<replaceable>zone-name</replaceable>]</arg>
+    </cmdsynopsis>
   </refsynopsisdiv>
 
   <refsect1>
@@ -39,6 +44,46 @@
     ranges. In that case, the final list of address is formed by taking the
     first list and then removing the addresses defined in the
     exclusion.</para>
+
+    <para>Beginning in Shorewall 4.4.13, the second form of exclusion is
+    allowed after <emphasis role="bold">all</emphasis> and <emphasis
+    role="bold">any</emphasis> in the SOURCE and DEST columns of
+    /etc/shorewall/rules. It allows you to omit arbitrary zones from the list
+    generated by those key words.</para>
+
+    <warning>
+      <para>If you omit a sub-zone and there is an explicit or explicit
+      CONTINUE policy, a connection to/from that zone can still be matched by
+      the rule generated for a parent zone.</para>
+
+      <para>For example:</para>
+
+      <blockquote>
+        <para>/etc/shorewall6/zones:</para>
+
+        <programlisting>#ZONE          TYPE
+z1             ip
+z2:z1          ip
+...</programlisting>
+
+        <para>/etc/shorewall6/policy:</para>
+
+        <programlisting>#SOURCE         DEST          POLICY
+z1              net           CONTINUE
+z2              net           REJECT</programlisting>
+
+        <para>/etc/shorewall6/rules:</para>
+
+        <programlisting>#ACTION         SOURCE        DEST        PROTO         DEST
+#                                                       PORT(S)
+ACCEPT          all!z2        net         tcp           22</programlisting>
+
+        <para>In this case, SSH connections from <emphasis
+        role="bold">z2</emphasis> to <emphasis role="bold">net</emphasis> will
+        be accepted by the generated <emphasis role="bold">z1</emphasis> to
+        net ACCEPT rule.</para>
+      </blockquote>
+    </warning>
   </refsect1>
 
   <refsect1>
