@@ -393,8 +393,10 @@
           used either in the <emphasis role="bold">SOURCE</emphasis> or
           <emphasis role="bold">DEST</emphasis> column intra-zone traffic is
           not affected. When <emphasis role="bold">all+</emphasis>[<emphasis
-          role="bold">-</emphasis>] is "used, intra-zone traffic is
-          affected.</para>
+          role="bold">-</emphasis>] is "used, intra-zone traffic is affected.
+          Beginning with Shorewall 4.4.13, exclusion is supported -- see see
+          <ulink
+          url="shorewall6-exclusion.html">shorewall6-exclusion</ulink>(5).</para>
 
           <para>Except when <emphasis role="bold">all</emphasis>[<emphasis
           role="bold">+</emphasis>][<emphasis role="bold">-</emphasis>] or
@@ -527,7 +529,9 @@
           url="shorewall-zones.html">shorewall-zones</ulink> (5). Ths
           <replaceable>zone-list</replaceable> may be optionally followed by
           "+" to indicate that the rule is to apply to intra-zone traffic as
-          well as inter-zone traffic.</para>
+          well as inter-zone traffic. Beginning with Shorewall-4.4.13,
+          exclusion is supported -- see see <ulink
+          url="shorewall6-exclusion.html">shorewall6-exclusion</ulink>(5).</para>
 
           <para>When <emphasis role="bold">none</emphasis> is used either in
           the <emphasis role="bold">SOURCE</emphasis> or <emphasis
